vlib/v/checker/tests/immutable_array_struct.out
vlib/v/checker/tests/immutable_array_struct.v:8:2: error: `a` is immutable, declare it with `mut` to append items to it
    6| fn main() {
    7|     a := []A{}
    8|     a[0].i << 3
           ^
    9| }
