vlib/v/checker/tests/immutable_array_struct.v
struct A {
pub mut:
	i []int
}

fn main() {
	a := []A{}
	a[0].i << 3
}
